--- a/_pages/research.html
+++ b/_pages/research.html
@@ -71,9 +71,8 @@ ul.task-list li input[type="checkbox"] {
 Overview of my research themes
 </p>
 </div>
-<hr>
-<section id="previous-and-ongoing-research" class="level2">
-<h2 class="anchored" data-anchor-id="previous-and-ongoing-research">Previous and Ongoing Research</h2>
+<section id="ongoing-and-previous-research" class="level2">
+<h2 class="anchored" data-anchor-id="ongoing-and-previous-research">Ongoing and Previous Research</h2>
 <section id="comfort-in-automated-driving" class="level3">
 <h3 class="anchored" data-anchor-id="comfort-in-automated-driving">🚘 Comfort in Automated Driving</h3>
 <p><em>My doctoral research focuses on passenger comfort in automated driving, investigating the role of driving styles and the conceptualisation of comfort, and my postdoctoral research extends this understanding to real-world settings.</em></p>
@@ -102,12 +101,10 @@ Overview of my research themes
 </section>
 <section id="related-projects" class="level4">
 <h4 class="anchored" data-anchor-id="related-projects"><strong>Related Projects</strong></h4>
-<div style="margin-left: 25px; margin-bottom: 12px; line-height: 1.6;">
-<p><span style="background-color: #F4EEF7; color: #4A1863; padding: 3px 10px; border-radius: 8px; border: 1px solid #D0BCDA;"> <strong>SHAPE-IT: Supporting the Interaction of Humans and Automated Vehicles</strong> </span> | <strong>Role:</strong> ESR | Horizon Europe Marie Curie ITN | <a href="https://shape-it.eu/">Link</a></p>
-</div>
-<div style="margin-left: 25px; margin-bottom: 12px; line-height: 1.6;">
-<p><span style="background-color: #F4EEF7; color: #4A1863; padding: 3px 10px; border-radius: 8px; border: 1px solid #D0BCDA;"><strong>Hi-Drive</strong></span> | <strong>Role:</strong> Researcher, Co-I | European Commission/FP7 | <a href="https://www.hi-drive.eu/">Link 1</a> &amp; <a href="https://environment.leeds.ac.uk/dir-record/research-projects/2108/hi-drive">Link 2</a></p>
-</div>
+<ul>
+<li><p><span style="background-color: #F4EEF7; color: #4A1863; padding: 3px 10px; border-radius: 8px; border: 1px solid #D0BCDA;"><strong>SHAPE-IT: Supporting the Interaction of Humans and Automated Vehicles</strong></span>, <strong>Role:</strong> ESR, Horizon Europe Marie Curie ITN, <a href="https://shape-it.eu/">Link</a></p></li>
+<li><p><span style="background-color: #F4EEF7; color: #4A1863; padding: 3px 10px; border-radius: 8px; border: 1px solid #D0BCDA;"><strong>Hi-Drive</strong></span>, <strong>Role:</strong> Researcher, European Commission/FP7, <a href="https://www.hi-drive.eu/">Link 1</a> &amp; <a href="https://environment.leeds.ac.uk/dir-record/research-projects/2108/hi-drive">Link 2</a></p></li>
+</ul>
 <hr>
 </section>
 </section>
@@ -126,9 +123,9 @@ Overview of my research themes
 </section>
 <section id="related-projects-1" class="level4">
 <h4 class="anchored" data-anchor-id="related-projects-1"><strong>Related projects:</strong></h4>
-<div style="margin-left: 25px; margin-bottom: 15px; line-height: 1.6;">
-<p><span style="background-color: #F4EEF7; color: #4A1863; padding: 3px 10px; border-radius: 8px; border: 1px solid #D0BCDA;"><strong>Humans meet technology behind the wheel: Understanding drivers’ feelings and behaviours around ADAS</strong></span> | <strong>Role:</strong> Co-I | British Academy | <a href="https://environment.leeds.ac.uk/research-project/1/faculty-of-environment/2192/humans-meet-technology-behind-the-wheel-understanding-drivers-feelings-and-behaviours-around-advanced-driver-assistance-systems">Link</a></p>
-</div>
+<ul>
+<li><span style="background-color: #F4EEF7; color: #4A1863; padding: 3px 10px; border-radius: 8px; border: 1px solid #D0BCDA;"><strong>Humans meet technology behind the wheel: Understanding drivers’ feelings and behaviours around ADAS</strong></span>, <strong>Role:</strong> Co-I, British Academy, <a href="https://environment.leeds.ac.uk/research-project/1/faculty-of-environment/2192/humans-meet-technology-behind-the-wheel-understanding-drivers-feelings-and-behaviours-around-advanced-driver-assistance-systems">Link</a></li>
+</ul>
 <hr>
 </section>
 </section>
@@ -140,9 +137,9 @@ Overview of my research themes
 </ul>
 <section id="related-projects-2" class="level4">
 <h4 class="anchored" data-anchor-id="related-projects-2"><strong>Related projects:</strong></h4>
-<div style="margin-left: 25px; margin-bottom: 15px; line-height: 1.6;">
-<p><span style="background-color: #F4EEF7; color: #4A1863; padding: 3px 10px; border-radius: 8px; border: 1px solid #D0BCDA;"><strong>e-SAFE: Equity, Social Determinants, Anti-social Behaviour and Future E-Mobility</strong></span> | <strong>Role:</strong> Researcher | Road Safety Trust | <a href="https://environment.leeds.ac.uk/dir-record/research-projects/2151/e-safe-equity-social-determinants-anti-social-behaviour-and-future-e-mobility">Link</a></p>
-</div>
+<ul>
+<li><span style="background-color: #F4EEF7; color: #4A1863; padding: 3px 10px; border-radius: 8px; border: 1px solid #D0BCDA;"><strong>e-SAFE: Equity, Social Determinants, Anti-social Behaviour and Future E-Mobility</strong></span>, <strong>Role:</strong> Researcher, Road Safety Trust, <a href="https://environment.leeds.ac.uk/dir-record/research-projects/2151/e-safe-equity-social-determinants-anti-social-behaviour-and-future-e-mobility">Link</a></li>
+</ul>
 <hr>
 </section>
 </section>
